Updated with info on --pause option when taking snapshots and --tag option

--- a/README
+++ b/README
@@ -5,3 +5,7 @@ VirtualBox script to take snapshots of all guests on a given system and/or prune
 * Pruning is specified by --prune_snapshots option which takes the number of snapshots to keep
   (ie: --prune_snapshots 10 means keep only 10 snapshots per guest, deleting any older ones)
 * Status is logged to stdout and can optionally be logged to an email address via BufferedSMTPHandler
+* Snapshots are named "yyyy/mm/dd hh:mm:ss"
+  Optionally, a tag suffix can be applied (specified by --tag option) to 
+  indicate that the snapshot was taken with this script
+  (eg: "yyyy/mm/dd hh:mm:ss tag")
